fix(table): border radius clipping

--- a/packages/components/base/src/table/THead/index.module.scss
+++ b/packages/components/base/src/table/THead/index.module.scss
@@ -15,5 +15,9 @@
     &:first-child {
       border-top-left-radius: inherit;
     }
+
+    &:last-child {
+      border-top-right-radius: inherit;
+    }
   }
 }
